<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dungeon Secretary</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search Public Characters</string>
    
    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="btn_next_view">Next</string>

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="stat_save">Save</string>
    <string name="stat_edit">Edit</string>
    <string name="stat_delete">Delete</string>
    
    <!--  Popup Menu test -->
    <string name="popup_delete">Delete</string>
    
    <!-- Text View For Stat Page -->
    <string name="stat_list_page">Statistic List</string>
    <string name="add_stat">Add Statistic</string>
    <string name="edit_stat">Edit Statistic</string>
    <string name="stat_name">Stat Name</string>
    <string name="stat_value">Value</string>
    <string name="stat_type">Type</string>
    <string name="put_equation">Put Equation</string>
    <string name="plus_text">+ Text</string>
    <string name="plus_value">+ Value</string>
    
    <!-- for button -->
     <string name="btn_cancel">Cancel</string>
     <string name="btn_save">Save</string>
     <string name="btn_delete">Delete</string>
     <string name="btn_add">Add</string>
     <string name="btn_done">Done</string>
    
     
     
     
    
    <string-array name="math_operation">
        <item>+</item>
        <item>-</item>
        <item>x</item>
        <item>/</item>
    </string-array>
    
    <string-array name="stat_type_selection">
        <item>Text</item>
        <item>Number</item>
    </string-array>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Find People</item>\
        <item >Photos</item>
        <item>Communities</item>
        <item>Pages</item>
        <item>What\'s Hot</item>        
    </string-array>
    
    <!-- Nave Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>
        
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
</resources>
