<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
    
    <TableRow
	    android:id="@+id/tableRow1"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#000000" >

        <TextView
            android:id="@+id/contactsTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/stat_list_page"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" 
            android:layout_weight="1"/>
         <Button
            android:id="@+id/btn_plus_text"
            android:background="#444444"
            android:layout_width="70dp"
            android:onClick="showAddStat"
            android:text="@string/plus_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_plus"
            android:background="#444444"
            android:layout_marginLeft="5dp"
            android:layout_width="70dp"
            android:onClick="showAddStat"
            android:text="@string/plus_value"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
     </TableRow>
     <TableRow
	    android:id="@+id/tableRow2"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
    <ListView
         android:id="@+id/list_stat_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1">
     </ListView>
     </TableRow>

</TableLayout>